--- a/midterm/Dockerfile
+++ b/midterm/Dockerfile
@@ -4,7 +4,7 @@ RUN apt-get install -y python-pip python-dev build-essential
 COPY . /app
 WORKDIR /app
 RUN pip install -r requirements.txt
-RUN apt-get install redis-server
+RUN apt-get install redis-server -y
 ENTRYPOINT ["python"]
 CMD ["app.py"]
 
