--- a/midterm/docker-compose.yml
+++ b/midterm/docker-compose.yml
@@ -2,7 +2,7 @@
 version: "3"
 
 services:
-  flask-anim:
+  web:
     build: .
     container_name: sierrao_web
     ports:
@@ -10,7 +10,7 @@ services:
     volumes: 
       - ./data/data_file.json:/data_file.json
   redis:
-    image: sierrao/midterm:1.0
+    image: redis:latest
     ports: 
       - 6405:6379
     volumes: 
