--- a/homework06/sierrao-test-pvc.yml
+++ b/homework06/sierrao-test-pvc.yml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: sierra_o-test-data
+  name: sierrao-test-data
   labels:
-    username: sierra_o
+    username: sierrao
     env: test
 spec:
   accessModes:
