Update and rename sierra_o-test-redis-deployment.yml to sierrao-test-redis-deployment.yml

--- a/homework06/sierrao-test-redis-deployment.yml
+++ b/homework06/sierrao-test-redis-deployment.yml
@@ -2,32 +2,32 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: sierra_o-test-redis-deployment
+  name: sierrao-test-redis-deployment
   labels:
-    username: sierra_o
+    username: sierrao
     env: test
-    app: sierra_o-test-redis
+    app: sierrao-test-redis
 spec:
   replicas: 1
   selector:
     matchLabels:
-      username: sierra_o
+      username: sierrao
       env: test
-      app: sierra_o-test-redis
+      app: sierrao-test-redis
   template:
     metadata:
       labels:
-        username: sierra_o
+        username: sierrao
         env: test
-        app: sierra_o-test-redis
+        app: sierrao-test-redis
     spec:
       containers:
-        - name: sierra_o-test-redis
+        - name: sierrao-test-redis
           image: redis:5.0.0
           volumeMounts:
-          - name: sierra_o-test-data
+          - name: sierrao-test-data
             mountPath: "/data"
       volumes:
-      - name: sierra_o-test-data
+      - name: sierrao-test-data
         persistentVolumeClaim:
-          claimName: sierra_o-test-data
+          claimName: sierrao-test-data
