--- a/homework06/sierrao-test-redis-service.yml
+++ b/homework06/sierrao-test-redis-service.yml
@@ -2,12 +2,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: sierra_o-test-redis-service
+  name: sierrao-test-redis-service
 spec:
   type: ClusterIP
   selector:
-    app: sierra_o-test-redis
+    app: sierrao-test-redis
   ports:
-  - name: sierra_o-test-redis
+  - name: sierrao-test-redis
     port: 6379
     targetPort: 6379
